--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
   <div class="container">
     <div class="content-qr">
-      <img src="/images/image-qr-code.png" alt="">
+      <img src="image-qr-code.png" alt=""> 
       <h2>Improve your front-end skills by building projects</h2>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
     </div>
   </div>
-
+ 
 </body>
 </html>
